# opppo_lab

./: .gitignore  CMakeLists.txt  README.md  file.txt
include/container/: container.h
include/files/: audiof.h  filesAVI.h  imagef.h  videof.h
include/hand_commands/: handCom.h
include/utils/: utils.h
src/: main.cpp
src/container/: container.cpp
src/files/: audiof.cpp  filesAVI.cpp  imagef.cpp  videof.cpp
src/hand_commands/: handCom.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  test_audiof.cpp  test_container.cpp  test_handcom.cpp  test_imagef.cpp  test_utils.cpp  test_videof.cpp
